# trt_api_infer

./: CMakeLists.txt  README.md
calib/: calibrator.cpp
convert/: conver.py
covert/: gen_wts.py
include/: model.h  yoloplugin.h
infer/: infer.cpp  yolov3.cpp
plugin/: yololayer.cu  yololayer.h  yoloplugin.cu
